# cpp-vol2

./: .gitignore  Makefile  README.md  metadata.tex
01-constr-destr/: Makefile.def  Makefile.mk  constructor.tex  content.tex  destructor.tex  main.tex  slides.tex  vecnum.tex
01-copy-move/: Makefile.def  Makefile.mk  constructor.tex  content.tex  destructor.tex  main.tex  slides.tex  vecnum.tex
01-noexcept/: Makefile.def  content.tex  garantias.tex  main.tex  noexcept.tex  slides.tex
02-constr-destr/: Makefile.def  constructor.tex  content.tex  destructor.tex  main.tex  slides.tex  vecnum.tex
02-copia/: Makefile.def  Makefile.mk  asignacion-copia.tex  constr-copia.tex  content.tex  copia-smart.tex  copiadef.tex  main.tex  opcopia.tex  slides.tex
03-copia/: Makefile.def  asignacion-copia.tex  constr-copia.tex  content.tex  copia-smart.tex  copiadef.tex  main.tex  slides.tex
03-noexcept/: Makefile.def  Makefile.mk  content.tex  main.tex  noexcept.tex  propaga.tex  slides.tex
04-move/: Makefile.def  Makefile.mk  composition.tex  content.tex  copyvsmove.tex  main.tex  (+3 more)
ejemplos/05-memmgmt/vecnum/: CMakeLists.txt  main.cpp  utest.cpp  vecnum.cpp  vecnum.hpp
ejemplos/06-dynpol/geom/: CMakeLists.txt  circulo.cpp  circulo.hpp  figura.cpp  figura.hpp  punto.cpp  punto.hpp
ejemplos/06-dynpol/geom/demo/: main.cpp
ejemplos/06-dynpol/geom/utest/: CMakeLists.txt  t_circulo.cpp  t_figura.cpp
ejemplos/06-dynpol/geom2/: CMakeLists.txt  circulo.cpp  circulo.hpp  diagrama.hpp  figura.cpp  figura.hpp  punto.cpp  punto.hpp  rectangulo.cpp  rectangulo.hpp
ejemplos/06-dynpol/geom2/demo/: CMakeLists.txt  main.cpp
ejemplos/06-dynpol/geom2/utest/: CMakeLists.txt  t_circulo.cpp  t_figura.cpp  t_punto.cpp  t_rectangulo.cpp
(+123 files in other folders)
